<resources>
    <string name="app_name">RGHIS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_item_health_info">Health Info</string>
    <string name="drawer_item_news">News</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="settings">Settings</string>
    <string name="health_info">Health Info</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="forum">Forum</string>
    <string name="signup">Sign up</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="signup_desc">No account yet? Create one</string>
    <string name="login_desc">Already a member? Login</string>
    <string name="username">Username</string>
    <string name="likes_template">%d {cmd-heart}</string>
    <string name="replies_template">%d {cmd-reply}</string>
    <string name="thread_title">Thread title</string>
    <string name="thread_message">Thread message</string>
    <string name="login">Login</string>
    <string name="login_signup">Login / Sign Up</string>

    <string name="moments_ago">moments ago</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="minute_ago">a minute ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="hour_ago">an hour ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="day_ago">a day ago</string>
    <string name="years_ago">%1$d years ago</string>
    <string name="year_ago">a year ago</string>
    <string name="message">Message</string>
    <string name="news">News</string>
    <string name="avatar_transition">avatar_transition</string>
    <string name="emergency_info">Emergency Procedures</string>
    <string name="large_layout">large</string>
    <string name="password_placeholder">&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;</string>
    <string name="email_address">Email address</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="profile">Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="by">by</string>
    <string name="search_hint">Search</string>
    <string name="health_pro">Health Pro</string>

    <array name="post_item_menu">
        <item>Edit post</item>
        <item>Delete post</item>
    </array>
</resources>
