<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/primary_dark"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:overScrollMode="never"
    android:scrollbars="none"
    android:theme="@style/AppTheme.Dark">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/launcher_web" />

        <LinearLayout
            android:id="@+id/sign_up_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <sg.rghis.android.views.widgets.SmartTextInputLayout
                android:id="@+id/first_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/first_name_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/first_name"
                    android:singleLine="true" />
            </sg.rghis.android.views.widgets.SmartTextInputLayout>

            <sg.rghis.android.views.widgets.SmartTextInputLayout
                android:id="@+id/last_name_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/last_name_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/last_name"
                    android:singleLine="true" />
            </sg.rghis.android.views.widgets.SmartTextInputLayout>

            <sg.rghis.android.views.widgets.SmartTextInputLayout
                android:id="@+id/email_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical">

                <EditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />
            </sg.rghis.android.views.widgets.SmartTextInputLayout>
        </LinearLayout>

        <sg.rghis.android.views.widgets.SmartTextInputLayout
            android:id="@+id/username_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/username_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:inputType="text"
                android:singleLine="true" />
        </sg.rghis.android.views.widgets.SmartTextInputLayout>


        <sg.rghis.android.views.widgets.SmartTextInputLayout
            android:id="@+id/password_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/password_edit_text"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </sg.rghis.android.views.widgets.SmartTextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/primary_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/login" />

        <TextView
            android:id="@+id/link_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/signup_desc"
            android:textSize="16dip" />
    </LinearLayout>
</ScrollView>


