<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:minHeight="150dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_view"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/avatar_placeholder" />

        <TextView
            android:id="@+id/name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/avatar_view"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:padding="4dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/blue_700"
            tools:text="Hee Jun Yi" />

        <TextView
            android:id="@+id/professional_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_rect"
            android:paddingBottom="4dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="4dp"
            android:text="@string/health_pro"
            android:textColor="@color/white"
            android:textSize="10sp"
            android:visibility="gone" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/divider" />


    <android.support.v7.widget.GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:columnCount="4">

        <TextView
            android:padding="8dp"
            android:text="@string/username"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="right" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_columnSpan="3"
            app:layout_columnWeight="1"
            tools:text="junyihjy" />


        <TextView
            android:padding="8dp"
            android:text="@string/first_name"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="right" />


        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_columnSpan="1"
            tools:text="Jun Yi" />

        <ImageView
            android:id="@+id/edit_first_name"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="2dp"
            android:src="@drawable/ic_mode_edit_grey_600_24dp"
            app:layout_columnSpan="1" />

        <Space app:layout_columnSpan="1" />


        <TextView
            android:padding="8dp"
            android:text="@string/last_name"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="right" />


        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_columnSpan="1"
            tools:text="Hee" />

        <ImageView
            android:id="@+id/edit_last_name"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="2dp"
            android:src="@drawable/ic_mode_edit_grey_600_24dp"
            app:layout_columnSpan="1" />

        <Space app:layout_columnSpan="1" />

        <TextView
            android:padding="8dp"
            android:text="@string/email_address"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="right" />


        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@color/black"
            app:layout_columnSpan="1"
            tools:text="junyi.hjy\@gmail.com" />

        <ImageView
            android:id="@+id/edit_email"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="2dp"
            android:src="@drawable/ic_mode_edit_grey_600_24dp"
            app:layout_columnSpan="1" />

        <Space app:layout_columnSpan="1" />

        <TextView
            android:padding="8dp"
            android:text="@string/password"
            app:layout_columnSpan="1"
            app:layout_columnWeight="1"
            app:layout_gravity="right" />


        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/password_placeholder"
            android:textColor="@color/black"
            app:layout_columnSpan="1" />

        <ImageView
            android:id="@+id/edit_password"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="2dp"
            android:src="@drawable/ic_mode_edit_grey_600_24dp"
            app:layout_columnSpan="1" />

    </android.support.v7.widget.GridLayout>

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:padding="12dp"
        android:text="@string/sign_out"
        android:theme="@style/AppTheme.Dark" />
</LinearLayout>